# rsc2

./: .gitignore  .gitmodules  Cargo.toml  README.md  buff  build.rs  entities.json  run.sh
.cargo/: config.toml
bot/: Cargo.toml
bot/src/: main.rs  throughput.rs
bot/src/queries/: create_database.surql  mod.rs  register_observation.surql
bot/src/store/: mod.rs  model.rs
examples/: Cargo.toml  dev.rs
rsc2/: Cargo.toml
rsc2-data/: Cargo.toml
rsc2-data/src/: enum.rs  lib.rs  main.rs  raw.rs
rsc2-derive/: Cargo.toml
rsc2-derive/src/: lib.rs
rsc2-derive/tests/: expand.rs  tests.rs  try_into.rs
rsc2-macro/: Cargo.toml
rsc2-macro/src/: lib.rs  tryinto.rs  wrapenum.rs
rsc2-pb/: Cargo.toml  build.rs
rsc2-pb/src/: codec.rs  default.rs  lib.rs  prelude.rs  result.rs
rsc2/examples/: Cargo.toml  simple.rs  worker_rush.rs
rsc2/src/: agent.rs  commands.rs  coordinator.rs  definitions.rs  engine.rs  hook.rs  ingame.rs  lib.rs  main.rs  prelude.rs  state_machine.rs
rsc2/src/agent/: agent.rs  hook.rs  mod.rs  raw.rs
rsc2/src/api/: mod.rs  raw.rs
rsc2/src/producer/: mod.rs
rsc2/src/runtime/: builder.rs  commands.rs  coordinator.rs  mod.rs  ressource.rs  state.rs
rsc2/src/states/: shared.rs
src/: bot.rs  engine.rs  lib.rs  main.rs  sc2_api.rs  state_machine.rs
src/proto/: default.rs  mod.rs  prelude.rs  result.rs  wrap.rs
src/states/: ended.rs  error.rs  ingame.rs  init.rs  inner.rs  launch.rs  mod.rs  replay.rs  shared.rs  states.rs
tests/: Cargo.toml  derive.rs  runtime.rs
