[package]
name = "rsc2"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"
build = "build.rs"

# TODO: change prost-derive this online crate

[dependencies]
tokio = "0.1.22"
websocket = "0.23.0"
bytes = "*"
prost = {git = "https://github.com/hyyking/prost.git"}

log = {version="0.4.8", features=["max_level_debug", "release_max_level_info"]}
pretty_env_logger = "0.3.1"

[build-dependencies]
prost-build = {git = "https://github.com/hyyking/prost.git"}
