[workspace]
members = ["bot", "rsc2", "rsc2-pb"]
resolver = "3"

[workspace.dependencies]
bytes = { version = "1" }
either = { version = "1" }
futures = { version = "0.3" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }
prost = { version = "0.14" }
prost-build = { version = "0.14" }
thiserror = { version = "1" }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
websocket-codec = { version = "0.5" }
websocket-lite = { version = "0.5" }
surrealdb = { version = "2" }
serde = { version = "1.0" }
serde_json = "1.0"
chrono = { version = "0.4" }
anyhow = { version = "1.0" }

# The following packages are used in the workspace
rsc2_pb = { path = "rsc2-pb", version = "1.0", features = ["codec"] }
rsc2 = { path = "rsc2", version = "0.1" }
