[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rsc2 = { path = "../rsc2", version = "0.1" }
rsc2_pb = { path = "../rsc2-pb", version = "1.0", features = ["codec"] }
futures = { version = "0.3" }
tokio-util = { version = "0.7" }
tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
websocket-lite = { version = "0.5" }
log = { version = "0.4", features = ["max_level_trace"] }
thiserror = { version = "1" }
pretty_env_logger = "0.4"
surrealdb = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
