[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
rsc2 = { workspace = true, version = "0.1" }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt", "time"] }
websocket-lite = { workspace = true }
log = { workspace = true, features = ["max_level_trace"] }
thiserror = { workspace = true }
pretty_env_logger = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
moka = { workspace = true, features = ["future"] }
