[package]
name = "rsc2_pb"
version = "1.0.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"
build = "build.rs"

[features]
codec = ["tokio-util", "websocket-codec"]

[dependencies]
prost = {version = "0.7"}
bytes = {version = "1"}

websocket-codec = {version="0.5", optional=true}
tokio-util = {version="0.6", features=["codec"], optional=true}

[build-dependencies]
prost-build = {version = "0.7"}
