[package]
name = "rsc2_pb"
version = "1.0.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2024"
build = "build.rs"

[features]
codec = ["tokio-util", "websocket-codec"]

[dependencies]
prost = { workspace = true }
bytes = { workspace = true }
websocket-codec = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["codec"] }

[build-dependencies]
prost-build = { workspace = true }
