[package]
name = "rsc2"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsc2_pb = { path = "../rsc2-pb", version = "1.0", features = ["codec"] }
futures = { version = "0.3" }
tokio-util = { version = "0.7" }
tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
websocket-lite = { version = "0.5" }
log = { version = "0.4", features = ["max_level_trace"] }
pretty_env_logger = "0.4"
