[package]
name = "rsc2"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
websocket-lite = { workspace = true }
rsc2_pb = { workspace = true, features = ["codec"] }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true, features = ["net"] }
log = { workspace = true }
thiserror = { version = "1" }
either = { version = "1" }

[dev-dependencies]

pretty_env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
